welcome.lessons.welcome.variables.RunHalf.scala.code
override def run() {
}
var orange=0
var bisc=0
while(!2 * biscuits = caseOrange + 1) {
	avance()
	if (estSurOrange()) {orange=orange + 1}
	if (estSurBiscuit()) {bisc=bisc + 1}

}